verify/src/snapshots/verify__module__tests__verify_safety1_fail.snap
---
source: verify/src/module.rs
expression: "z3_verify(&m).expect_err(\"verification should fail\")"
---
fails:
  - loc:
      start: 181
      end: 197
    reason: NotInductive
    error:
      Sat:
        signature:
          sorts: []
          relations:
            - mutable: true
              name: p
              args: []
              sort: Bool
            - mutable: true
              name: q
              args: []
              sort: Bool
        universe: []
        interp:
          - shape:
              - 2
            data:
              - 0
          - shape:
              - 2
            data:
              - 1

